--- a/sample/src/button/images.html
+++ b/sample/src/button/images.html
@@ -1,8 +1,9 @@
 <template>
     <section>
-        <collapse-panel title="Images" allow-collapse.bind="false">
-            <button au-kendo-button="icon: funnel">Image Button</button>
-            <button au-kendo-button="spriteCssClass: (k-icon netherlandsFlag)">Sprite Icon Button</button>
+        <collapse-panel title="Basic use" allow-collapse.bind="false">
+            <button au-kendo-button="sprite-css-class: k-icon netherlandsFlag">Sprite icon</button>
+            <button au-kendo-button="icon: funnel">Kendo UI sprite icon</button>
+            <button au-kendo-button="image-url: http://demos.telerik.com/kendo-ui/content/shared/icons/sports/snowboarding.png">Image icon</button>
         </collapse-panel>
 
         <collapse-panel title="Code Preview">
@@ -10,24 +11,58 @@
                 <ul>
                     <li class="k-state-active">HTML</li>
                     <li>Code</li>
+                    <li>CSS</li>
                 </ul>
-
                 <div>
                     <au-code language="markup">
-                       <button au-kendo-button="icon: funnel">Image Button</button>
-                       <button au-kendo-button="spriteCssClass: (k-icon netherlandsFlag)">Sprite Icon Button</button>
+                      <button au-kendo-button="sprite-css-class: k-icon netherlandsFlag">Sprite icon</button>
+                      <button au-kendo-button="icon: funnel">Kendo UI sprite icon</button>
+                      <button au-kendo-button="image-url: http://demos.telerik.com/kendo-ui/content/shared/icons/sports/snowboarding.png">Image icon</button>
                     </au-code>
                 </div>
 
                 <div>
                     <au-code language="javascript">
-                        export class Images {
+                        export class BasicUse {
 
                         }
                     </au-code>
                 </div>
 
+                <div>
+                    <au-code language="css">
+                      .demo-section {
+                          line-height: 4em;
+                      }
+                      .demo-section .k-button {
+                          margin-right: 10px;
+                      }
+                      .k-button .k-image {
+                          height: 16px;
+                      }
+                      .netherlandsFlag {
+                          background-image: url("http://demos.telerik.com/kendo-ui/content/shared/styles/flags.png");
+                          background-position: 0 -64px;
+                      }
+                    </au-code>
+                  </div>
             </div>
         </collapse-panel>
     </section>
+
+    <style>
+      .demo-section {
+          line-height: 4em;
+      }
+      .demo-section .k-button {
+          margin-right: 10px;
+      }
+      .k-button .k-image {
+          height: 16px;
+      }
+      .netherlandsFlag {
+          background-image: url("http://demos.telerik.com/kendo-ui/content/shared/styles/flags.png");
+          background-position: 0 -64px;
+      }
+    </style>
 </template>
