--- a/sample/src/grid/working-offline.html
+++ b/sample/src/grid/working-offline.html
@@ -9,7 +9,7 @@
             <au-col field="ProductName"></au-col>
             <au-col field="UnitsInStock" title="Units In Stock" width="120px"></au-col>
             <au-col command="destroy" title="&nbsp;" width="250px"></au-col>
-            <au-col command="edit" title="&nbsp;" width="250px"></au-col>
+            <au-col command.bind="['update', 'destroy']" title="&nbsp;" width="250px"></au-col>
           </au-kendo-grid>
         </collapse-panel>
 
@@ -28,7 +28,7 @@
                         <au-col field="ProductName"></au-col>
                         <au-col field="UnitsInStock" title="Units In Stock" width="120px"></au-col>
                         <au-col command="destroy" title="&nbsp;" width="250px"></au-col>
-                        <au-col command="update" title="&nbsp;" width="250px"></au-col>
+                        <au-col command.bind="['update', 'destroy']" title="&nbsp;" width="250px"></au-col>
                       </au-kendo-grid>
                     </au-code>
                 </div>
