--- a/sample/src/grid/working-offline.html
+++ b/sample/src/grid/working-offline.html
@@ -8,8 +8,7 @@
           <au-kendo-grid data-source.bind="datasource" pageable.bind="{refresh: true}" height="450" toolbar.bind="['create']" editable="inline">
             <au-col field="ProductName"></au-col>
             <au-col field="UnitsInStock" title="Units In Stock" width="120px"></au-col>
-            <au-col command="destroy" title="&nbsp;" width="250px"></au-col>
-            <au-col command.bind="['update', 'destroy']" title="&nbsp;" width="250px"></au-col>
+            <au-col command.bind="['edit', 'destroy']" title="&nbsp;" width="250px"></au-col>
           </au-kendo-grid>
         </collapse-panel>
 
@@ -27,8 +26,7 @@
                       <au-kendo-grid data-source.bind="datasource" pageable.bind="{refresh: true}" height="450" toolbar.bind="['create']" editable="inline">
                         <au-col field="ProductName"></au-col>
                         <au-col field="UnitsInStock" title="Units In Stock" width="120px"></au-col>
-                        <au-col command="destroy" title="&nbsp;" width="250px"></au-col>
-                        <au-col command.bind="['update', 'destroy']" title="&nbsp;" width="250px"></au-col>
+                        <au-col command.bind="['edit', 'destroy']" title="&nbsp;" width="250px"></au-col>
                       </au-kendo-grid>
                     </au-code>
                 </div>
