issue 134 for grid wrapper

--- a/sample/src/menu/images.html
+++ b/sample/src/menu/images.html
@@ -1,6 +1,9 @@
 <template>
     <section>
         <collapse-panel title="Images" allow-collapse.bind="false">
+            <au-kendo-menu "data-source.bind: datasource">
+
+            </au-kendo-menu>
         </collapse-panel>
 
         <collapse-panel title="Code Preview">
