--- a/sample/src/grid/binding-to-local-data.html
+++ b/sample/src/grid/binding-to-local-data.html
@@ -1,7 +1,7 @@
 <template>
     <section>
         <collapse-panel title="Binding to local data" allow-collapse.bind="false">
-          <au-kendo-grid data-source.bind="datasource" pageable.bind="{ input: true, numeric: false}" filterable.bind="true" sortable.bind="true" height.bind="550" scrollable.bind="true">
+          <au-kendo-grid data-source.bind="datasource" pageable.bind="{ input: true, numeric: false}" filterable.bind="true" sortable.bind="true" scrollable.bind="true">
             <au-col title="ProductName" field="ProductName"></au-col>
             <au-col title="Unit Price" field="UnitPrice" format="{0:c}" width="130px"></au-col>
             <au-col title="Units In Stock" field="UnitsInStock" width="130px"></au-col>
