--- a/sample/src/grid/binding-to-remote-data.html
+++ b/sample/src/grid/binding-to-remote-data.html
@@ -1,7 +1,7 @@
 <template>
     <section>
         <collapse-panel title="Binding to remote data" allow-collapse.bind="false">
-          <au-kendo-grid data-source.bind="datasource" pageable.bind="true" filterable.bind="true" sortable.bind="true" height.bind="550">
+          <au-kendo-grid data-source.bind="datasource" pageable.bind="true" filterable.bind="true" sortable.bind="true">
             <au-col title="OrderId" field="OrderID"></au-col>
             <au-col field="Freight"></au-col>
             <au-col title="Order Date" field="OrderDate" format="{0:MM/dd/yyyy}"></au-col>
