fix(grid): use .bind on width integers

--- a/sample/src/grid/batch-editing.html
+++ b/sample/src/grid/batch-editing.html
@@ -2,10 +2,10 @@
     <section>
         <collapse-panel title="Batch editing" allow-collapse.bind="false">
           <au-kendo-grid data-source.bind="datasource" height="420" pageable.bind="true" navigatable.bind="true" toolbar.bind="['create', 'save', 'cancel']" editable.bind="true">
-            <au-col field="UnitPrice" title="Unit Price" format="{0:c}" width="120"></au-col>
-            <au-col field="UnitsInStock" title="Units In Stock" width="120"></au-col>
-            <au-col field="Discontinued" width="120"></au-col>
-            <au-col command="destroy" title="&nbsp;" width="150"></au-col>
+            <au-col field="UnitPrice" title="Unit Price" format="{0:c}" width.bind="120"></au-col>
+            <au-col field="UnitsInStock" title="Units In Stock" width.bind="120"></au-col>
+            <au-col field="Discontinued" width.bind="120"></au-col>
+            <au-col command="destroy" title="&nbsp;" width.bind="150"></au-col>
           </au-kendo-grid>
         </collapse-panel>
 
@@ -18,10 +18,10 @@
                  <div>
                     <au-code language="markup">
                       <au-kendo-grid data-source.bind="datasource" height="550" pageable.bind="true" navigatable.bind="true" toolbar.bind="['create', 'save', 'cancel']" editable.bind="true">
-                        <au-col field="UnitPrice" title="Unit Price" format="{0:c}" width="120"></au-col>
-                        <au-col field="UnitsInStock" title="Units In Stock" width="120"></au-col>
-                        <au-col field="Discontinued" width="120"></au-col>
-                        <au-col command="destroy" title="&nbsp;" width="150"></au-col>
+                        <au-col field="UnitPrice" title="Unit Price" format="{0:c}" width.bind="120"></au-col>
+                        <au-col field="UnitsInStock" title="Units In Stock" width.bind="120"></au-col>
+                        <au-col field="Discontinued" width.bind="120"></au-col>
+                        <au-col command="destroy" title="&nbsp;" width.bind="150"></au-col>
                       </au-kendo-grid>
                     </au-code>
                 </div>
