--- a/sample/src/grid/popup-editing.html
+++ b/sample/src/grid/popup-editing.html
@@ -1,7 +1,7 @@
 <template>
     <section>
         <collapse-panel title="Popup editing" allow-collapse.bind="false">
-          <au-kendo-grid data-source.bind="datasource" height="420" pageable.bind="true" toolbar.bind="['create']" editable="inline">
+          <au-kendo-grid data-source.bind="datasource" height="420" pageable.bind="true" toolbar.bind="['create']" editable="popup">
             <au-col field="ProductName"></au-col>
             <au-col field="UnitPrice" title="Unit Price" format="{0:c}" width="120px"></au-col>
             <au-col field="UnitsInStock" title="Units In Stock" width="120px"></au-col>
@@ -20,10 +20,10 @@
                     <au-code language="markup">
                       <au-kendo-grid data-source.bind="datasource" height="550" pageable.bind="true" toolbar.bind="['create']" editable="inline">
                         <au-col field="ProductName"></au-col>
-                        <au-col field="UnitPrice" title="Unit Price" format="{0:c}" width="120px"></au-col>
-                        <au-col field="UnitsInStock" title="Units In Stock" width="120px"></au-col>
-                        <au-col field="Discontinued" width="120px"></au-col>
-                        <au-col command.bind="['edit', 'destroy']" title="&nbsp;" width="250px"></au-col>
+                        <au-col field="UnitPrice" title="Unit Price" format="{0:c}" width.bind="120px"></au-col>
+                        <au-col field="UnitsInStock" title="Units In Stock" width.bind="120px"></au-col>
+                        <au-col field="Discontinued" width.bind="120px"></au-col>
+                        <au-col command.bind="['edit', 'destroy']" title="&nbsp;" width.bind="250px"></au-col>
                       </au-kendo-grid>
                     </au-code>
                 </div>
