--- a/sample/src/grid/virtualization-of-remote-data.html
+++ b/sample/src/grid/virtualization-of-remote-data.html
@@ -6,12 +6,12 @@
           <br>
           <br>
           <au-kendo-grid data-source.bind="datasource" sortable.bind="true" scrollable.bind="{virtual:true}">
-            <au-col title="Order ID" field="OrderID" width="110"></au-col>
-            <au-col title="Customer ID" field="CustomerID" width="130"></au-col>
-            <au-col title="Ship Name" field="ShipName" width="280"></au-col>
+            <au-col title="Order ID" field="OrderID" width.bind="110"></au-col>
+            <au-col title="Customer ID" field="CustomerID" width.bind="130"></au-col>
+            <au-col title="Ship Name" field="ShipName" width.bind="280"></au-col>
             <au-col title="Ship Address" field="ShipAddress"></au-col>
-            <au-col title="Ship City" field="ShipCity" width="160"></au-col>
-            <au-col title="Ship Country" field="ShipCountry" width="160"></au-col>
+            <au-col title="Ship City" field="ShipCity" width.bind="160"></au-col>
+            <au-col title="Ship Country" field="ShipCountry" width.bind="160"></au-col>
             <au-col title="Test">
               <button au-kendo-button class="k-primary">Enable</button>
             </au-col>
@@ -27,12 +27,12 @@
                  <div>
                     <au-code language="markup">
                       <au-kendo-grid data-source.bind="datasource" sortable.bind="true" scrollable.bind="{virtual:true}">
-                        <au-col title="Order ID" field="OrderID" width="110"></au-col>
-                        <au-col title="Customer ID" field="CustomerID" width="130"></au-col>
-                        <au-col title="Ship Name" field="ShipName" width="280"></au-col>
+                        <au-col title="Order ID" field="OrderID" width.bind="110"></au-col>
+                        <au-col title="Customer ID" field="CustomerID" width.bind="130"></au-col>
+                        <au-col title="Ship Name" field="ShipName" width.bind="280"></au-col>
                         <au-col title="Ship Address" field="ShipAddress"></au-col>
-                        <au-col title="Ship City" field="ShipCity" width="160"></au-col>
-                        <au-col title="Ship Country" field="ShipCountry" width="160"></au-col>
+                        <au-col title="Ship City" field="ShipCity" width.bind="160"></au-col>
+                        <au-col title="Ship Country" field="ShipCountry" width.bind="160"></au-col>
                         <au-col title="Test">
                           <button au-kendo-button class="k-primary">Enable</button>
                         </au-col>
