fix(sample): workaround css attribute bug

--- a/sample/src/grid/basic-use.html
+++ b/sample/src/grid/basic-use.html
@@ -3,7 +3,7 @@
         <collapse-panel title="Basic use" allow-collapse.bind="false">
           <au-kendo-grid data-source.bind="datasource" auto-bind.bind="false" pageable.bind="pageable" sortable.bind="true">
             <au-col title="Contact Name" field="ContactName">
-              <div class='customer-photo' css="background-image: url(http://demos.telerik.com/kendo-ui/content/web/Customers/${CustomerID}.jpg);"></div>
+              <div class='customer-photo' style="background-image: url(http://demos.telerik.com/kendo-ui/content/web/Customers/${CustomerID}.jpg);"></div>
               <div class='customer-name'>${ContactName}</div>
             </au-col>
             <au-col title="Contact Name" field="ContactName"></au-col>
@@ -23,7 +23,7 @@
                   <au-code language="markup">
                     <au-kendo-grid data-source.bind="datasource" auto-bind.bind="false" pageable.bind="pageable" sortable.bind="true">
                       <au-col title="Contact Name" field="ContactName">
-                        <div class='customer-photo' css="background-image: url(http://demos.telerik.com/kendo-ui/content/web/Customers/${CustomerID}.jpg);"></div>
+                        <div class='customer-photo' style="background-image: url(http://demos.telerik.com/kendo-ui/content/web/Customers/${CustomerID}.jpg);"></div>
                         <div class='customer-name'>${ContactName}</div>
                       </au-col>
                       <au-col title="Contact Name" field="ContactName"></au-col>
