--- a/sample/src/grid/popup-editing.html
+++ b/sample/src/grid/popup-editing.html
@@ -18,12 +18,12 @@
                 </ul>
                  <div>
                     <au-code language="markup">
-                      <au-kendo-grid data-source.bind="datasource" height="550" pageable.bind="true" toolbar.bind="['create']" editable="inline">
+                      <au-kendo-grid data-source.bind="datasource" height="420" pageable.bind="true" toolbar.bind="['create']" editable="popup">
                         <au-col field="ProductName"></au-col>
-                        <au-col field="UnitPrice" title="Unit Price" format="{0:c}" width.bind="120px"></au-col>
-                        <au-col field="UnitsInStock" title="Units In Stock" width.bind="120px"></au-col>
-                        <au-col field="Discontinued" width.bind="120px"></au-col>
-                        <au-col command.bind="['edit', 'destroy']" title="&nbsp;" width.bind="250px"></au-col>
+                        <au-col field="UnitPrice" title="Unit Price" format="{0:c}" width="120px"></au-col>
+                        <au-col field="UnitsInStock" title="Units In Stock" width="120px"></au-col>
+                        <au-col field="Discontinued" width="120px"></au-col>
+                        <au-col command.bind="['edit', 'destroy']" title="&nbsp;" width="250px"></au-col>
                       </au-kendo-grid>
                     </au-code>
                 </div>
