removed height specification from "pageable" grids

--- a/sample/src/grid/popup-editing.html
+++ b/sample/src/grid/popup-editing.html
@@ -1,7 +1,7 @@
 <template>
     <section>
         <collapse-panel title="Popup editing" allow-collapse.bind="false">
-          <au-kendo-grid data-source.bind="datasource" height="420" pageable.bind="true" toolbar.bind="['create']" editable="popup">
+          <au-kendo-grid data-source.bind="datasource" pageable.bind="true" toolbar.bind="['create']" editable="popup">
             <au-col field="ProductName"></au-col>
             <au-col field="UnitPrice" title="Unit Price" format="{0:c}" width="120px"></au-col>
             <au-col field="UnitsInStock" title="Units In Stock" width="120px"></au-col>
