--- a/sample/src/grid/batch-editing.html
+++ b/sample/src/grid/batch-editing.html
@@ -1,7 +1,7 @@
 <template>
     <section>
         <collapse-panel title="Batch editing" allow-collapse.bind="false">
-          <au-kendo-grid data-source.bind="datasource" height="420" pageable.bind="true" navigatable.bind="true" toolbar.bind="['create', 'save', 'cancel']" editable.bind="true">
+          <au-kendo-grid data-source.bind="datasource" pageable.bind="true" navigatable.bind="true" toolbar.bind="['create', 'save', 'cancel']" editable.bind="true">
             <au-col field="UnitPrice" title="Unit Price" format="{0:c}" width.bind="120"></au-col>
             <au-col field="UnitsInStock" title="Units In Stock" width.bind="120"></au-col>
             <au-col field="Discontinued" width.bind="120"></au-col>
