renamed basic-usage to basic-use

--- a/sample/src/area-chart/basic-use.html
+++ b/sample/src/area-chart/basic-use.html
@@ -1,6 +1,6 @@
 <template>
     <section>
-        <collapse-panel title="Basic usage" allow-collapse.bind="false">
+        <collapse-panel title="Basic use" allow-collapse.bind="false">
             <au-au-kendo-chart data-source.bind="datasource" auto-bind.bind="false" pageable.bind="pageable" sortable.bind="true">
 
             </au-au-kendo-chart>
