--- a/sample/src/area-chart/basic-use.html
+++ b/sample/src/area-chart/basic-use.html
@@ -1,7 +1,7 @@
 <template>
     <section>
         <collapse-panel title="Basic use" allow-collapse.bind="false">
-            <au-au-kendo-chart data-source.bind="datasource" auto-bind.bind="false" pageable.bind="pageable" sortable.bind="true">
+            <au-au-kendo-chart >
 
             </au-au-kendo-chart>
         </collapse-panel>
