--- a/sample/src/grid/working-offline.html
+++ b/sample/src/grid/working-offline.html
@@ -24,7 +24,7 @@
                       <button au-kendo-button class="k-primary" click.delegate="online()">Go online</button>
                       <button au-kendo-button class="k-primary" click.delegate="offline()">Go offline</button>
 
-                      <au-kendo-grid data-source.bind="datasource" pageable.bind="{refresh: true}" height="420" toolbar.bind="['create']" editable="inline">
+                      <au-kendo-grid data-source.bind="datasource" pageable.bind="{refresh: true}" toolbar.bind="['create']" editable="inline">
                         <au-col field="ProductName"></au-col>
                         <au-col field="UnitsInStock" title="Units In Stock" width="120px"></au-col>
                         <au-col command.bind="['edit', 'destroy']" title="&nbsp;" width="250px"></au-col>
