--- a/sample/src/area-chart/binding-to-grouped-data.html
+++ b/sample/src/area-chart/binding-to-grouped-data.html
@@ -1,6 +1,14 @@
 <template>
     <section>
         <collapse-panel title="Binding to grouped data" allow-collapse.bind="false">
+          <au-kendo-chart title.bind="{text: 'Stock Prices'}"
+                          data-source.bind="datasource"
+                          legend.bind="{position: 'bottom'}"
+                          series.bind="series"
+                          value-axis.bind="valueAxis"
+                          category-axis.bind="categoryAxis"
+                          tooltip.bind="tooltip">
+          </au-kendo-chart>
         </collapse-panel>
 
         <collapse-panel title="Code Preview">
