--- a/sample/src/area-chart/binding-to-local-data.html
+++ b/sample/src/area-chart/binding-to-local-data.html
@@ -1,6 +1,15 @@
 <template>
     <section>
         <collapse-panel title="Binding to local data" allow-collapse.bind="false">
+          <au-kendo-chart title.bind="{text: 'Internet Users in United States'}"
+                          data-source.bind="{data: internetUsers}"
+                          legend.bind="{ visible: false }"
+                          series-defaults.bind="seriesDefaults"
+                          series.bind="series"
+                          value-axis.bind="valueAxis"
+                          category-axis.bind="categoryAxis"
+                          tooltip.bind="tooltip">
+          </au-kendo-chart>
         </collapse-panel>
 
         <collapse-panel title="Code Preview">
