--- a/sample/src/area-chart/date-axis.html
+++ b/sample/src/area-chart/date-axis.html
@@ -1,6 +1,78 @@
 <template>
     <section>
         <collapse-panel title="Date axis" allow-collapse.bind="false">
+
+          <au-kendo-chart view-model.ref="chart"
+                          title.bind="{text: 'GDP growth and standard deviation'}"
+                          data-source.bind="datasource"
+                          series.bind="series"
+                          category-axis.bind="categoryAxis">
+          </au-kendo-chart>
+
+          <div class="box-col">
+            <h4>Base date unit</h4>
+            <ul class="options">
+                <li>
+                    <input id="baseUnitAuto" name="baseUnit"
+                            type="radio" value="" autocomplete="off" />
+                    <label for="baseUnitAuto">Automatic (default)</label>
+                </li>
+                <li>
+                    <input id="baseUnitYears" name="baseUnit"
+                            type="radio" value="years" autocomplete="off" />
+                    <label for="baseUnitYears">Years</label>
+                </li>
+                <li>
+                    <input id="baseUnitMonths" name="baseUnit"
+                            type="radio" value="months" autocomplete="off" />
+                    <label for="baseUnitMonths">Months</label>
+                </li>
+                <li>
+                    <input id="baseUnitWeeks" name="baseUnit"
+                            type="radio" value="weeks" checked="checked" autocomplete="off" />
+                    <label for="baseUnitWeeks">Weeks</label>
+                </li>
+                <li>
+                    <input id="baseUnitDays" name="baseUnit"
+                            type="radio" value="days" autocomplete="off" />
+                    <label for="baseUnitDays">Days</label>
+                </li>
+            </ul>
+          </div>
+          <div class="box-col">
+              <h4>Aggregate function</h4>
+              <ul class="options">
+                  <li>
+                      <input id="aggregateMax" name="aggregate"
+                              type="radio" value="max" autocomplete="off" />
+                      <label for="aggregateMax">Max (default)</label>
+                  </li>
+                  <li>
+                      <input id="aggregateMin" name="aggregate"
+                              type="radio" value="min" autocomplete="off" />
+                      <label for="aggregateMin">Min</label>
+                  </li>
+                  <li>
+                      <input id="aggregateSum" name="aggregate"
+                              type="radio" value="sum" autocomplete="off" />
+                      <label for="aggregateSum">Sum</label>
+                  </li>
+                  <li>
+                      <input id="aggregateAvg" name="aggregate"
+                              type="radio" value="avg" checked="checked" autocomplete="off" />
+                      <label for="aggregateAvg">Avg</label>
+                  </li>
+                  <li>
+                      <input id="aggregateCount" name="aggregate"
+                              type="radio" value="count" autocomplete="off" />
+                      <label for="aggregateCount">Count</label>
+                  </li>
+              </ul>
+          </div>
+          <div class="box-col">
+              <h4>&nbsp;</h4>
+              <p>Custom aggregate functions are supported.</p>
+          </div>
         </collapse-panel>
 
         <collapse-panel title="Code Preview">
