--- a/sample/src/grid/basic-use.html
+++ b/sample/src/grid/basic-use.html
@@ -18,6 +18,7 @@
                 <ul>
                     <li class="k-state-active">HTML</li>
                     <li>Code</li>
+                    <li>CSS</li>
                 </ul>
                 <div>
                   <au-code language="markup">
@@ -54,6 +55,32 @@
                         }
                       }
                     </au-code>
+                </div>
+
+                <div>
+                  <au-code language="css">
+                    <style type="text/css">
+                        .customer-photo {
+                            display: inline-block;
+                            width: 32px;
+                            height: 32px;
+                            border-radius: 50%;
+                            background-size: 32px 35px;
+                            background-position: center center;
+                            vertical-align: middle;
+                            line-height: 32px;
+                            box-shadow: inset 0 0 1px #999, inset 0 0 10px rgba(0,0,0,.2);
+                            margin-left: 5px;
+                        }
+
+                        .customer-name {
+                            display: inline-block;
+                            vertical-align: middle;
+                            line-height: 32px;
+                            padding-left: 3px;
+                        }
+                    </style>
+                  </au-code>
                 </div>
             </div>
         </collapse-panel>
