--- a/sample/src/area-chart/binding-to-grouped-data.html
+++ b/sample/src/area-chart/binding-to-grouped-data.html
@@ -19,11 +19,85 @@
                 </ul>
                 <div>
                     <au-code language="markup">
+                      <au-kendo-chart title.bind="{text: 'Stock Prices'}"
+                                      data-source.bind="datasource"
+                                      legend.bind="{position: 'bottom'}"
+                                      series.bind="series"
+                                      value-axis.bind="valueAxis"
+                                      category-axis.bind="categoryAxis"
+                                      tooltip.bind="tooltip">
+                      </au-kendo-chart>
                     </au-code>
                 </div>
 
                 <div>
                     <au-code language="javascript">
+                      export class BindingToGroupedArea {
+                        datasource = new kendo.data.DataSource({
+                          transport: {
+                            read: function(options) {
+                              return System.import('area-chart/json/stock-data-2011.json!json')
+                              .then(data => options.success(data));
+                            }
+                          },
+
+                          group: {
+                            field: "symbol"
+                          },
+
+                          sort: {
+                            field: "date",
+                            dir: "asc"
+                          },
+
+                          schema: {
+                            model: {
+                              fields: {
+                                date: {
+                                  type: "date"
+                                }
+                              }
+                            }
+                          }
+                        });
+
+                        series = [{
+                            type: "area",
+                            field: "close",
+                            name: "${group.value} (close)"
+                        }];
+
+                        valueAxis = {
+                            labels: {
+                                format: "${0}",
+                                skip: 2,
+                                step: 2
+                            },
+                            line: {
+                                visible: false
+                            },
+                            max: 700
+                        };
+
+                        categoryAxis = {
+                            field: "date",
+                            labels: {
+                                format: "MMM"
+                            },
+                            line: {
+                                visible: false
+                            },
+                            majorGridLines: {
+                                visible: false
+                            }
+                        };
+
+                        tooltip = {
+                            visible: true,
+                            format: "{0}%",
+                            template: "${series.name} - ${value}%"
+                        };
+                      }
                     </au-code>
                 </div
             </div>
