--- a/sample/src/area-chart/date-axis.html
+++ b/sample/src/area-chart/date-axis.html
@@ -83,11 +83,133 @@
                 </ul>
                 <div>
                     <au-code language="markup">
+                      <au-kendo-chart view-model.ref="chart"
+                                      title.bind="{text: 'GDP growth and standard deviation'}"
+                                      data-source.bind="datasource"
+                                      series.bind="series"
+                                      category-axis.bind="categoryAxis">
+                      </au-kendo-chart>
+
+                      <div class="box-col">
+                        <h4>Base date unit</h4>
+                        <ul class="options">
+                            <li>
+                                <input id="baseUnitAuto" name="baseUnit"
+                                        type="radio" value="" autocomplete="off" />
+                                <label for="baseUnitAuto">Automatic (default)</label>
+                            </li>
+                            <li>
+                                <input id="baseUnitYears" name="baseUnit"
+                                        type="radio" value="years" autocomplete="off" />
+                                <label for="baseUnitYears">Years</label>
+                            </li>
+                            <li>
+                                <input id="baseUnitMonths" name="baseUnit"
+                                        type="radio" value="months" autocomplete="off" />
+                                <label for="baseUnitMonths">Months</label>
+                            </li>
+                            <li>
+                                <input id="baseUnitWeeks" name="baseUnit"
+                                        type="radio" value="weeks" checked="checked" autocomplete="off" />
+                                <label for="baseUnitWeeks">Weeks</label>
+                            </li>
+                            <li>
+                                <input id="baseUnitDays" name="baseUnit"
+                                        type="radio" value="days" autocomplete="off" />
+                                <label for="baseUnitDays">Days</label>
+                            </li>
+                        </ul>
+                      </div>
+                      <div class="box-col">
+                          <h4>Aggregate function</h4>
+                          <ul class="options">
+                              <li>
+                                  <input id="aggregateMax" name="aggregate"
+                                          type="radio" value="max" autocomplete="off" />
+                                  <label for="aggregateMax">Max (default)</label>
+                              </li>
+                              <li>
+                                  <input id="aggregateMin" name="aggregate"
+                                          type="radio" value="min" autocomplete="off" />
+                                  <label for="aggregateMin">Min</label>
+                              </li>
+                              <li>
+                                  <input id="aggregateSum" name="aggregate"
+                                          type="radio" value="sum" autocomplete="off" />
+                                  <label for="aggregateSum">Sum</label>
+                              </li>
+                              <li>
+                                  <input id="aggregateAvg" name="aggregate"
+                                          type="radio" value="avg" checked="checked" autocomplete="off" />
+                                  <label for="aggregateAvg">Avg</label>
+                              </li>
+                              <li>
+                                  <input id="aggregateCount" name="aggregate"
+                                          type="radio" value="count" autocomplete="off" />
+                                  <label for="aggregateCount">Count</label>
+                              </li>
+                          </ul>
+                      </div>
+                      <div class="box-col">
+                          <h4>&nbsp;</h4>
+                          <p>Custom aggregate functions are supported.</p>
+                      </div>
                     </au-code>
                 </div>
 
                 <div>
                     <au-code language="javascript">
+                      export class DateAxis {
+                        datasource = {
+                          data: [
+                            { value: 30, date: new Date("2011/12/20") },
+                            { value: 50, date: new Date("2011/12/21") },
+                            { value: 45, date: new Date("2011/12/22") },
+                            { value: 40, date: new Date("2011/12/23") },
+                            { value: 35, date: new Date("2011/12/24") },
+                            { value: 40, date: new Date("2011/12/25") },
+                            { value: 42, date: new Date("2011/12/26") },
+                            { value: 40, date: new Date("2011/12/27") },
+                            { value: 35, date: new Date("2011/12/28") },
+                            { value: 43, date: new Date("2011/12/29") },
+                            { value: 38, date: new Date("2011/12/30") },
+                            { value: 30, date: new Date("2011/12/31") },
+                            { value: 48, date: new Date("2012/01/01") },
+                            { value: 50, date: new Date("2012/01/02") },
+                            { value: 55, date: new Date("2012/01/03") },
+                            { value: 35, date: new Date("2012/01/04") },
+                            { value: 30, date: new Date("2012/01/05") }]
+                        };
+
+                        series = [{
+                            type: "area",
+                            aggregate: "avg",
+                            field: "value",
+                            categoryField: "date"
+                        }];
+
+                        categoryAxis = {
+                          baseUnit: 'weeks'
+                        };
+
+                        refresh() {
+                            let widget = this.chart.widget,
+                                baseUnitInputs = $("input:radio[name=baseUnit]"),
+                                aggregateInputs = $("input:radio[name=aggregate]");
+
+                            for (var i = 0, length = widget.options.series.length; i < length; i++) {
+                                widget.options.series[i].aggregate = aggregateInputs.filter(":checked").val();
+                            };
+
+                            widget.options.categoryAxis.baseUnit = baseUnitInputs.filter(":checked").val();
+
+                            this.chart.refresh();
+                        }
+
+                        attached() {
+                          $(".box-col").bind("change", () => this.refresh());
+                        }
+                      }
                     </au-code>
                 </div
             </div>
